--- a/gruvbox.css
+++ b/gruvbox.css
@@ -334,7 +334,7 @@ tr.disabled a {
 /* end navigation */
 
 .alert {
-  border-radius: 0;
+  border-radius: 15px;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
 }
 
